--- a/style.css
+++ b/style.css
@@ -19,3 +19,8 @@
     top: 0;
     left: 0;
 }
+
+#body {
+    overflow-y: hidden; /* Hide vertical scrollbar */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+}
