--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 #hero video {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background-position: absolute;
     z-index: 10;
@@ -20,7 +20,39 @@
     left: 0;
 }
 
-#body {
-    overflow-y: hidden; /* Hide vertical scrollbar */
-    overflow-x: hidden; /* Hide horizontal scrollbar */
+.button {
+    width: 48px;
+    height: 48px;
+    cursor: pointer;
 }
+
+.defs {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+}
+
+iframe {
+    float: left;
+    width: 0px;
+    height: 0px;
+}
+
+.buttons {
+    padding: 1rem;
+    background: #414141;
+    float: left;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(0, -50%);
+    border: 5px solid #FFFF00;
+    }
+
+body {
+    padding: 1rem;
+}
+
+/* hide scrollbar and prevent scrolling */
+#div-1 { overflow: hidden; }
+#div-2 { overflow: visible; }
