--- a/style.css
+++ b/style.css
@@ -20,37 +20,73 @@
     left: 0;
 }
 
-.button {
-    width: 48px;
-    height: 48px;
-    cursor: pointer;
-}
-
-.defs {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-}
-
 iframe {
-    float: left;
-    width: 0px;
-    height: 0px;
+	margin: 0 auto;
+	width: 0px;
+	height: 0px;
+	float: left;
+	clear: both;
+	display: block;
+	background-color: #eee;
 }
 
 .buttons {
-    padding: 1rem;
-    background: #414141;
-    float: left;
-    position: absolute;
+	position: relative;
+	margin: 0 auto 20px auto;
     top: 50%;
-    right: 50%;
-    transform: translate(0, -50%);
-    border: 5px solid #FFFF00;
-    }
-
-body {
-    padding: 1rem;
+    left: 50%;
+	padding: 20px;
+	float: left;
+	display: block;
+	background-color: #eee;
+	border-radius: 4px;
+}
+.buttons:after {
+	top: 100%;
+	left: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-color: rgba(238, 238, 238, 0);
+	border-top-color: #eee;
+	border-width: 10px;
+	margin-left: -10px;
+}
+.button {
+	padding: 10px 20px;
+	font-weight: bold;
+	letter-spacing: 5px;
+	outline: none;
+	cursor: pointer;
+	color: white;
+	background-color: #7F8C8D;
+	border: none;
+	border-radius: 4px;
+}
+#play-button {
+	background-color: #2ECC71;
+}
+#play-button:hover {
+	background-color: #27AE60;
+}
+#pause-button {
+	background-color: #E67E22;
+}
+#pause-button:hover {
+	background-color: #D35400;
+}
+#stop-button {
+	background-color: #E74C3C;
+}
+#stop-button:hover {
+	background-color: #C0392B;
+}
+#pause-button,
+#stop-button {
+	margin-left: 15px;
 }
 
 /* hide scrollbar and prevent scrolling */
